--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
+            <div class="my-style">
+                <h3>Edris Abuheli: Loves <em>Basketball</em> in San Diego, CA</h3>
+            </div>
+
             <div class="my-bio">
                 <h3>Stephanie</h3>
                 <h4>
